Fixing spacing and icon issue in sidebar

--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,7 @@ body {
 }
 
 h1 {
-  padding: 40px;
+  padding: 40px 40px 10px;
   letter-spacing: 2px;
 }
 
@@ -69,7 +69,8 @@ a:focus {
 }
 
 .icon {
-  font-size: 24px;
+  font-size: 40px;
+  padding-bottom: 10px;
 }
 
 #filter-label {
@@ -83,7 +84,7 @@ select {
 }
 
 #results-full-text {
-  padding-top: 20px;
+  padding: 20px;
 }
 
 #results-number {
